{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 30,
  "lineage": "abf3ed26-9abd-6fd0-0e1e-ce8d6c656fb4",
  "resources": [
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02457590d33d576c3",
            "arn": "arn:aws:ec2:us-east-1:024848444679:instance/i-0b211bfddd4ad0b3d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b211bfddd4ad0b3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07964d1f32f8ac73b",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_ip": "52.23.232.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca7f6bf0e2df5b34",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8ce4e2f84d4b4f1",
            "tags": {
              "Name": "EC2-1A"
            },
            "tags_all": {
              "Name": "EC2-1A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091fd125773568358"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_internet_gateway.gw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_route_table_association.public_assoc_1",
            "module.infra.aws_security_group.sg",
            "module.infra.aws_subnet.this",
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:internet-gateway/igw-0ebb0558afae11109",
            "id": "igw-0ebb0558afae11109",
            "owner_id": "024848444679",
            "tags": {
              "Name": "VPC-1-IGW"
            },
            "tags_all": {
              "Name": "VPC-1-IGW"
            },
            "vpc_id": "vpc-02220756d49390569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:route-table/rtb-0ed4301cd6cefc10e",
            "id": "rtb-0ed4301cd6cefc10e",
            "owner_id": "024848444679",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-1-RT-Private"
            },
            "tags_all": {
              "Name": "VPC-1-RT-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02220756d49390569"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:route-table/rtb-0921117c54f27894d",
            "id": "rtb-0921117c54f27894d",
            "owner_id": "024848444679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebb0558afae11109",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-1-RT-Public"
            },
            "tags_all": {
              "Name": "VPC-1-RT-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02220756d49390569"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_internet_gateway.gw",
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fc83514da230366",
            "route_table_id": "rtb-0ed4301cd6cefc10e",
            "subnet_id": "subnet-0491baaace89d2dc6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.this_b",
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de5990187cf607a1",
            "route_table_id": "rtb-0ed4301cd6cefc10e",
            "subnet_id": "subnet-043b4aedd9dce2a6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.this_d",
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d90943b48eb76531",
            "route_table_id": "rtb-0921117c54f27894d",
            "subnet_id": "subnet-0a8ce4e2f84d4b4f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_internet_gateway.gw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.this",
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b28e78babffcc3c8",
            "route_table_id": "rtb-0921117c54f27894d",
            "subnet_id": "subnet-0e245ecfd7af533cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_internet_gateway.gw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.this_c",
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:security-group/sg-091fd125773568358",
            "description": "Security group for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091fd125773568358",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "MY-SG-VPC",
            "name_prefix": "",
            "owner_id": "024848444679",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02220756d49390569"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:subnet/subnet-0a8ce4e2f84d4b4f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8ce4e2f84d4b4f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848444679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-A",
              "Tipo": "Public"
            },
            "tags_all": {
              "Name": "Sub-A",
              "Tipo": "Public"
            },
            "vpc_id": "vpc-02220756d49390569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:subnet/subnet-0491baaace89d2dc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0491baaace89d2dc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848444679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-B",
              "Tipo": "Private"
            },
            "tags_all": {
              "Name": "Sub-B",
              "Tipo": "Private"
            },
            "vpc_id": "vpc-02220756d49390569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:subnet/subnet-0e245ecfd7af533cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e245ecfd7af533cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848444679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-C",
              "Tipo": "Public"
            },
            "tags_all": {
              "Name": "Sub-C",
              "Tipo": "Public"
            },
            "vpc_id": "vpc-02220756d49390569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:subnet/subnet-043b4aedd9dce2a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043b4aedd9dce2a6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848444679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-D",
              "Tipo": "Private"
            },
            "tags_all": {
              "Name": "Sub-D",
              "Tipo": "Private"
            },
            "vpc_id": "vpc-02220756d49390569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848444679:vpc/vpc-02220756d49390569",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076c917fac2f409a5",
            "default_route_table_id": "rtb-081ca345497275d2b",
            "default_security_group_id": "sg-0a065abcccdf8db58",
            "dhcp_options_id": "dopt-0523269f25defdb2d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02220756d49390569",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081ca345497275d2b",
            "owner_id": "024848444679",
            "tags": {
              "Name": "VPC1"
            },
            "tags_all": {
              "Name": "VPC1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}